{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 942,
  "lineage": "c6b4eabc-e436-4605-9b89-8ec168c17950",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_server_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/andes-384517/zones/us-east1-b/instanceGroups/web-server-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-05-13T11:10:02.687-07:00",
            "enable_cdn": false,
            "fingerprint": "r4Hi_pu9iKw=",
            "generated_id": 2917007053160606869,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/andes-384517/global/healthChecks/web-health-check"
            ],
            "id": "projects/andes-384517/global/backendServices/web-server-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-server-backend",
            "port_name": "http",
            "project": "andes-384517",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/backendServices/web-server-backend",
            "session_affinity": "NONE",
            "timeout_sec": 60
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "google_artifact_registry_repository.flask-api",
            "google_compute_health_check.web_health_check",
            "google_compute_instance_group_manager.web_server",
            "google_compute_instance_template.web_server",
            "google_service_account.allow_zipped_app",
            "google_sql_database.app_db",
            "google_sql_database_instance.postgresql_instance",
            "google_sql_user.app_user",
            "google_storage_bucket.files",
            "random_password.postgresql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "locust_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8089"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-13T10:58:16.002-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/andes-384517/global/firewalls/locust-firewall",
            "log_config": [],
            "name": "locust-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/networks/default",
            "priority": 1000,
            "project": "andes-384517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/firewalls/locust-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "locust"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.locust",
            "google_service_account.allow_zipped_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web_server_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-13T11:09:40.742-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/andes-384517/global/firewalls/web-server-firewall",
            "log_config": [],
            "name": "web-server-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/networks/default",
            "priority": 1000,
            "project": "andes-384517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/firewalls/web-server-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.debian",
            "google_artifact_registry_repository.flask-api",
            "google_compute_instance_template.web_server",
            "google_service_account.allow_zipped_app",
            "google_sql_database.app_db",
            "google_sql_database_instance.postgresql_instance",
            "google_sql_user.app_user",
            "google_storage_bucket.files",
            "random_password.postgresql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "worker_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "5555",
                  "5672",
                  "15672"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-13T11:09:40.492-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/andes-384517/global/firewalls/worker-firewall",
            "log_config": [],
            "name": "worker-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/networks/default",
            "priority": 1000,
            "project": "andes-384517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/firewalls/worker-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.debian",
            "google_artifact_registry_repository.flask-api",
            "google_compute_instance_template.worker",
            "google_service_account.allow_zipped_app",
            "google_sql_database.app_db",
            "google_sql_database_instance.postgresql_instance",
            "google_sql_user.app_user",
            "google_storage_bucket.files",
            "random_password.postgresql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "web_server_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.92.215",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-05-13T10:58:01.328-07:00",
            "id": "projects/andes-384517/global/addresses/web-server-static-ip",
            "name": "web-server-static-ip",
            "prefix_length": 0,
            "project": "andes-384517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/addresses/web-server-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web_server_global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/andes-384517/global/forwardingRules/web-server-global-forwarding-rule",
            "ip_address": "projects/andes-384517/global/addresses/web-server-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-server-global-forwarding-rule",
            "port_range": "80",
            "project": "andes-384517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/forwardingRules/web-server-global-forwarding-rule",
            "target": "projects/andes-384517/global/targetHttpProxies/web-server-target-http-proxy"
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "google_artifact_registry_repository.flask-api",
            "google_compute_backend_service.web_server_backend",
            "google_compute_global_address.web_server_static_ip",
            "google_compute_health_check.web_health_check",
            "google_compute_instance_group_manager.web_server",
            "google_compute_instance_template.web_server",
            "google_compute_target_http_proxy.web_server_target_http_proxy",
            "google_compute_url_map.web_server_url_map",
            "google_service_account.allow_zipped_app",
            "google_sql_database.app_db",
            "google_sql_database_instance.postgresql_instance",
            "google_sql_user.app_user",
            "google_storage_bucket.files",
            "random_password.postgresql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "locust",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/andes-384517/zones/us-east1-b/disks/locust-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/andes-384517/zones/us-east1-b/instances/locust-instance",
            "instance_id": "2494618975471825220",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highcpu-16",
            "metadata_fingerprint": "8oXQ5FPn8sM=",
            "metadata_startup_script": "#!/bin/bash\n\n# install docker and docker-compose\nsudo apt update \u0026\u0026 sudo apt install -y \\\n  apt-transport-https \\\n  ca-certificates \\\n  curl \\\n  gnupg2 \\\n  gnupg-agent \\\n  software-properties-common \\\n  unzip \\\n  nfs-common\n\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -\nsudo add-apt-repository \"deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable\"\n\nsudo apt up [...]
            "name": "locust-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.15.205",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/networks/default",
                "network_ip": "10.142.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/andes-384517/regions/us-east1/subnetworks/default",
                "subnetwork_project": "andes-384517"
              }
            ],
            "project": "andes-384517",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/zones/us-east1-b/instances/locust-instance",
            "service_account": [
              {
                "email": "allow-zip-sa@andes-384517.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "locust"
            ],
            "tags_fingerprint": "gsA5M00Oueg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_service_account.allow_zipped_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "web_server_target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-13T11:10:35.811-07:00",
            "id": "projects/andes-384517/global/targetHttpProxies/web-server-target-http-proxy",
            "name": "web-server-target-http-proxy",
            "project": "andes-384517",
            "proxy_bind": false,
            "proxy_id": 2842172114225753204,
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/targetHttpProxies/web-server-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/urlMaps/web-server-url-map"
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "google_artifact_registry_repository.flask-api",
            "google_compute_backend_service.web_server_backend",
            "google_compute_health_check.web_health_check",
            "google_compute_instance_group_manager.web_server",
            "google_compute_instance_template.web_server",
            "google_compute_url_map.web_server_url_map",
            "google_service_account.allow_zipped_app",
            "google_sql_database.app_db",
            "google_sql_database_instance.postgresql_instance",
            "google_sql_user.app_user",
            "google_storage_bucket.files",
            "random_password.postgresql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web_server_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-13T11:10:24.317-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/backendServices/web-server-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "oHhzZjiiDhw=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/andes-384517/global/urlMaps/web-server-url-map",
            "map_id": 621571200676686975,
            "name": "web-server-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/backendServices/web-server-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "andes-384517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/andes-384517/global/urlMaps/web-server-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.debian",
            "google_artifact_registry_repository.flask-api",
            "google_compute_backend_service.web_server_backend",
            "google_compute_health_check.web_health_check",
            "google_compute_instance_group_manager.web_server",
            "google_compute_instance_template.web_server",
            "google_service_account.allow_zipped_app",
            "google_sql_database.app_db",
            "google_sql_database_instance.postgresql_instance",
            "google_sql_user.app_user",
            "google_storage_bucket.files",
            "random_password.postgresql_password"
          ]
        }
      ]
    }
  ]
}